--- a/index.html
+++ b/index.html
@@ -13,14 +13,18 @@
 </head>
 <body>
     <div class="fixedContainer">
+        <a href="">
         <div class="fixedLogo">
             <img src="images/library.svg" alt="" class="libraryIcon">
             <p class="">Library</p>
         </div>
+        </a>
         <ul class="fixedUi">
-            <li><img src="images/collection.svg" alt="" class="uiIcons"><p>Your Collection</p></li>
-            <li><img src="images/account.svg" alt="" class="uiIcons"><p>Profile</p></li>
-            <li><img src="images/settings.svg" alt="" class="uiIcons"><p>Settings</p></li>
+            <a href=""><li><img src="images/collection.svg" alt="" class="uiIcons"><p>Your Collection</p></li></a>
+
+            <a href=""><li><img src="images/account.svg" alt="" class="uiIcons"><p>Profile</p></li></a>
+            
+            <a href=""><li><img src="images/settings.svg" alt="" class="uiIcons"><p>Settings</p></li></a>
             
         </ul>
     </div>
